# LS-NTGF-GUI

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LS-NTGF-GUI.exe - 快捷方式.lnk  README.md  Release - 快捷方式.lnk
results/: rf_result_20260107_074805_669.csv  rf_result_20260107_075052_209.json
results/solution_RF_N300T30G5F5_1.33_20260106_044308/: rf_result_20260106_044311_800.csv
src/: analysis_widget.cpp  analysis_widget.h  cplex_settings_widget.cpp  cplex_settings_widget.h  difficulty_mapper.cpp  difficulty_mapper.h  generator_widget.cpp  generator_widget.h  generator_worker.cpp  generator_worker.h  log_widget.cpp  log_widget.h  main.cpp  main_window.cpp  main_window.h  parameter_widget.cpp  parameter_widget.h  results_widget.cpp  results_widget.h  solver_worker.cpp  solver_worker.h
src/panels/: capacity_panel.cpp  capacity_panel.h  overview_panel.cpp  overview_panel.h  setup_panel.cpp  setup_panel.h  variables_panel.cpp  variables_panel.h
src/widgets/: cost_bar.cpp  cost_bar.h  heatmap.cpp  heatmap.h  line_chart.cpp  line_chart.h  metric_card.cpp  metric_card.h
